syntax = "proto3";
package archway.cwerrors.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/archway-network/archway/x/cwerrors/types";

// SudoError defines the sudo message for the error callback
message SudoError {
  // module_name is the name of the module throwing the error
  string module_name = 1;
  // error_code is the module level error code
  uint32 error_code = 2;
  // contract_address is the address of the contract which will receive the
  // error callback
  string contract_address = 3;
  // input_payload is any input which caused the error
  string input_payload = 4;
  // error_message is the error message
  string error_message = 5;
}